# code-commenter

./: .gitignore  LICENSE  README.md  pyproject.toml
code_commenter/: __main__.py  cli.py
src/: __main__.py
